# skip-intro

./: README.md  main.py  pyproject.toml  skipper.py
extension/: background.js  content.js  manifest.json
